Laget egen Trend-klasse for å få bedre navngivning rundt i koden